--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "tsconfig": "*",
     "@types/node": "^17.0.12",
     "@types/react": "17.0.37",
-    "typescript": "^4.5.3"
+    "typescript": "^4.5.3",
+    "@netlify/plugin-nextjs":"4.2.4"
   }
 }
